--- a/application/templates/homepage/runninglive.html
+++ b/application/templates/homepage/runninglive.html
@@ -441,7 +441,14 @@
 												'count': count,
 												'kind': 'shoulder'
 											}
-											fetch('http://localhost:5000/exercise_end', {
+											fetch('http://localhost:5000/cumulative-result', {
+												method: 'POST',
+												headers: { 'Content-Type': 'application/json' },
+												body: JSON.stringify(data)
+											}).then(function (res) {
+												console.log(res);
+											})
+											fetch('http://localhost:5000/total-result', {
 												method: 'POST',
 												headers: { 'Content-Type': 'application/json' },
 												body: JSON.stringify(data)
