--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -326,12 +326,11 @@
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">이 주의 랭킹</h6>
+              <h6 class="m-0 font-weight-bold text-primary"></h6>
             </div>
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                  {{ placeholder }}
                   <thead>
                     <tr>
                       <th>랭킹</th>
